# Showcatcher

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260621000000_initial_schema.py  20260621000001_phase1_schema.py  20260621000002_phase2_schema.py  20260621000003_phase8_ticket_provider.py  20260622000001_phase4_schema.py  20260622000003_clean_event_headliners.py  20260622000004_event_spotify_url.py  20260622000005_event_description.py  20260623000001_phase5_schema.py  20260624000001_phase7_start_time.py  5d2ca07fd76f_phase3_schema.py  b4aea5d8a7ed_add_price_image_spotify_fields.py  bc9324610a89_add_sold_out_to_events.py  c8f804835b2b_add_doors_and_show_times.py
docs/: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  PROJECT_PLAN.md  README.md  RUNBOOK.md  VENUES.md
public/: index.html
src/opener/cli/: explain.py  health.py  pipeline.py  playlist.py  run.py
src/opener/core/: affinity.py  base.py  config.py  database.py  logging.py
src/opener/resolve/: matcher.py  models.py  stage.py
src/showcat/: __init__.py
tests/: conftest.py  test_db_isolation.py  test_discovery.py  test_event_ingest.py  test_history_ingest.py  test_pipeline.py  test_playlist.py  test_resolve.py  test_score.py  test_similarity.py  test_spotify_auth.py  test_spotify_client.py  test_spotify_metadata.py  test_spotify_search.py  test_stage.py  test_tag_ingest.py  test_ticket_providers.py  test_title_parser.py  test_travel.py  test_venue_adapters.py  test_web_merge.py  test_web_render.py
(+116 files in other folders)
